Replaced phone number

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <p class="leading-normal self-center text-2xl mb-8">
             Book a Car Now!!
           </p>
-          <a href="tel:+919098987676" class="self-center ">
+          <a href="tel:+916379953564" class="self-center ">
           <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             Call us
           </button>
@@ -144,7 +144,7 @@
                 24/7 Customer Support
               </p>
               <div class="w-full font-bold t-2 text-xl text-gray-800 px-6">
-                If there is any Query or issues you can Contact us via call (9890989099) or Whatsapp us
+                If there is any Query or issues you can Contact us via call +916379953564 or Whatsapp us
               </div>
             
           </div>
@@ -323,7 +323,7 @@
       </h3>
       <a href="tel:9876787656">
       <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-        Call Now 9090090909
+        Call Now +916379953564
       </button>
     </a>
     </section>
